@@ -5,6 +5,7 @@ CHANGELOG Roundcube Webmail
 - Fix support for an error as a string in message_before_send hook (#7475)
 - Elastic: Fix redundant scrollbar in plain text editor on mail reply (#7500)
 - Fix format=flowed formatting on plain text part derived from the HTML content (#7504)
+- Security: Fix potential XSS issue in HTML editor of the identity signature input (#7507)
 
 RELEASE 1.4.7
 -------------
